--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,10 @@
-PyQt6==6.5.1
-requests==2.28.1
-beautifulsoup4==4.11.1
-musicbrainzngs==0.7.1
-openai==0.27.0
-python-dotenv==1.0.0
-pydub==0.25.1
-yt-dlp==2023.3.1
-youtubesearchpython==1.2.8
-Pillow==9.4.0
-moviepy==1.0.3
-numpy==1.24.2
-genieapi==1.0.0
+google-auth>=2.0.0
+google-auth-oauthlib>=1.0.0
+google-auth-httplib2>=0.2.0
+google-api-python-client>=2.0.0
+python-dotenv
+Pillow
+moviepy
+openai
+pydub
+spotdl>=3.9.0
