feat: 리릭 비디오 생성 및 관리 기능 개선을 위한 데이터 경로 통합 및 디렉토리 구조 정리

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,22 @@
+# Bytecode / caches
 __pycache__/
+*.py[cod]
+
+# Local settings / secrets
+.env
+.env.*
+token.pickle
+
+# Runtime data & build artifacts
+data/
 output/
+result/
 results/
 temp/
+temp_test/
 uploader/
-.env
+
+# IDE/editor files
+.vscode/
+.idea/
+*.swp
